tests/usage/stderr.txt
    Checking usage v0.1.0 ($PWD/tests/usage)
error[E0603]: function `foo` is private
 --> tests/usage/src/main.rs:7:13
  |
7 |     procfs::foo()
  |             ^^^ private function
  |
note: the function `foo` is defined here
 --> tests/usage/src/main.rs:4:1
  |
4 | mod procfs;
  | ^^^^^^^^^^^
For more information about this error, try `rustc --explain E0603`.

